test/fixtures/public/fail/semantic/VarNotInit.jmm
/*  REASON:
    Variable "j" is undefined.
*/

class VarNotInit {
    int f;

    public static void main(String[] a) {
        int i;
        int j;
        int k;
        k = 2;
        i = j + k;
    }

    // Verify that fields and parameters aren't checked for variable initialization
    public boolean func(int a) {
        f = a;
        return true;
    }
}
